
* Non-recursive ``bzr ls`` now works properly when a path is specified.
  (Jelmer Vernooij, #357863)

* ssh usernames (defined in ~/.ssh/config) are honoured for bzr+ssh connections.
  (Vincent Ladeuil, #367726)

* Several bugs related to unicode symlinks have been fixed and the test suite
  enhanced to better catch regressions for them. (Vincent Ladeuil)

Documentation
*************

API Changes
***********

* ``InterPackRepo.fetch`` and ``RepoFetcher`` now raise ``NoSuchRevision``
  instead of ``InstallFailed`` when they detect a missing revision.
  ``InstallFailed`` itself has been deleted. (Jonathan Lange)

Internals
*********

* ``bzrlib.branch.Branch.set_parent`` is now present on the base branch
  class and will call ``_set_parent_location`` after doing unicode 
  encoding. (Robert Collins)

* ``bzrlib.remote.RemoteBranch._set_parent_location`` will use a new verb
  ``Branch.set_parent_location`` removing further VFS operations.
  (Robert Collins)

* ``bzrlib.bzrdir.BzrDir._get_config`` now returns a ``TransportConfig``
  or similar when the dir supports configuration settings. The base class
  defaults to None. There is a matching new server verb
  ``BzrDir.get-config_file`` to reduce roundtrips for getting BzrDir
  configuration. (Robert Collins)

* ``bzrlib.tests.ExtendedTestResult`` has new methods ``startTests``
  called before the first test is started, ``done`` called after the last
  test completes, and a new parameter ``strict``. (Robert Collins)

* -Dlock when passed to the selftest (e.g. ``bzr -Dlock selftest``) will
  cause mismatched physical locks to cause test errors rather than just
  reporting to the screen. (Robert Collins)

* Fallback ``CredentialStore`` instances registered with ``fallback=True``
  are now be able to provide credentials if obtaining credentials 
  via ~/.bazaar/authentication.conf fails. (Jelmer Vernooij, 
  Vincent Ladeuil, #321918)

* New smart server verb ``BzrDir.initialize_ex`` which implements a